<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_background"
        tools:context=".MainActivity2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="50dp">

        <TextView
            android:id="@+id/txt_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:text="SIGN UP"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.063" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="236dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/hnt_email"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.46" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="226dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/hnt_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="34dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.535"
            app:srcCompat="@drawable/password" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="260dp"
            android:layout_height="239dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/login" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="409dp"
            android:layout_height="51dp"
            android:background="#9C27B0"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/my_primary2"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="1dp"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="25dp"
            android:background="@color/my_primary2"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"></LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="93dp"
            android:layout_height="99dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.744"
            app:srcCompat="@drawable/signup" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="39dp"
            android:layout_marginEnd="51dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387"
            app:srcCompat="@drawable/person" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/hnt_userName"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="38dp"
            android:layout_height="37dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.616"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/hnt_rePassword"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.417"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="200dp"
            android:backgroundTint="@color/my_primary2"
            android:text="Sign In"
            android:textColor="#0B0B0B"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>